<resources>
    <string name="app_name">스마트홈트</string>
    <string name="notice_app_exit">한번 더 누르면 종료됩니다</string>
    <string name="page_home_title">스마트홈트</string>
    <string name="page_home_sub_title1">AI코치의 트레이닝으로 </string>
    <string name="page_home_sub_title2">홈트를 더욱더 스마트하게!</string>
    <string name="page_home_sub_title3">모바일 스마트홈트로 집에서 똑똑하게 홈트 하세요!</string>
    <string name="page_home_download">APP 다운로드</string>
    <string name="page_home_btn_guide">서비스 안내</string>



    <string name="page_program_title">스마트홈트</string>
    <string name="page_program_sub_title1">운동 목적</string>
    <string name="page_program_sub_title2">운동 유형</string>
    <string name="page_program_sub_title3">권장 횟수</string>
    <string name="page_program_sub_title4">평균 운동 시간</string>
    <string name="page_program_list_title">운동 구성</string>
    <string name="page_program_info_title">프로그램 소개</string>

    <string name="page_exercise_btn_play">운동하기</string>
    <string name="page_exercise_sub_title1">운동 부위</string>
    <string name="page_exercise_sub_title2">운동 시간</string>
    <string name="page_exercise_sub_title3">소모 칼로리</string>
    <string name="page_exercise_sub_title4">준비 도구</string>
    <string name="page_exercise_motion_title">%s개 동작</string>

    <string name="page_guide_title">스마트홈트</string>
    <string name="page_guide_sub_title">AI코치의 트레이닝으로 홈트를 더욱더 스마트하게!\n모바일 스마트홈트로 똑똑하게 홈트 하세요!</string>
    <string name="page_guide_reference">* 휴대폰 모델에 따라 서비스 지원 가능 여부가 다릅니다. QR코드를 스캔해 이용 가능 기기인지 확인해 보세요!</string>


    <string name="page_setup_sub_title">스마트홈트 TV APP</string>
    <string name="page_setup_version_title">버전</string>
    <string name="page_setup_version">V %s</string>
    <string name="page_setup_btn_update">업데이트</string>
    <string name="page_setup_copyright">Copyright ⓒ Kakao VX Corp. All right reserved.</string>
    <string name="page_setup_guide1">스마트홈트 Mobile APP 이용 안내</string>
    <string name="page_setup_guide2">모바일 스마트홈트로 AI코치와 함께</string>
    <string name="page_setup_guide3">더욱 스마트한 홈트를 경험하세요!</string>
    <string name="page_setup_guide4">서비스 이용문의</string>
    <string name="page_setup_guide5">ht.help@kakakoht.com</string>

    <string name="page_player_relay_confirm">오늘의  운동 기록이 있습니다.\n이어서 진행 하시겠습니까?</string>
    <string name="page_player_first">이전 동작이 없습니다.</string>
    <string name="page_player_last">마지막 동작입니다.</string>
    <string name="page_player_list">운동목록</string>
    <string name="page_player_multiview_list">화면 전환</string>
    <string name="page_player_multiview_representation">대표</string>
    <string name="page_player_exercise_result_complete">결과데이터를 전송합니다.</string>
    <string name="page_player_exercise_result_error">결과데이터를 전송하지못했습니다.</string>
    <string name="page_player_exit">운동이 완료되지 않았습니다. 정말 중단하시겠습니까?</string>
    <string name="page_player_completed">운동이 완료되었습니다.</string>
    <string name="page_player_btn_exit">나가기</string>
    <string name="page_player_btn_replay">다시하기</string>
    <string name="page_player_btn_reset">처음부터하기</string>
    <string name="page_player_btn_relay">이어서하기</string>
    <string name="page_player_btn_suspend">중단하기</string>
    <string name="page_player_btn_continue">계속하기</string>
    <string name="page_player_btn_skip">SKIP</string>
    <string name="page_player_breaktime_info">휴식시간입니다.</string>
    <string name="page_player_breaktime_end_info">곧 운동이 시작됩니다.</string>

    <string name="page_error_title">스마트홈트</string>
    <string name="page_video_preview">동작 미리보기 중입니다</string>
    <string name="page_video_preview_first">이전 동작이 없습니다.</string>
    <string name="page_video_preview_last">마지막 동작입니다.</string>


    <string name="left_tab_home">홈</string>
    <string name="left_tab_program">프로그램</string>
    <string name="left_tab_guide">서비스 안내</string>
    <string name="left_tab_setup">설정</string>


    <string name="list_exercise_title">운동</string>
    <string name="list_recent_title">최근 본 프로그램</string>
    <string name="list_recent_nodata">최근 본 프로그램이 없습니다.\n지금 바로 운동을 시작해보세요!</string>

    <string name="list_recommend_title">추천프로그램</string>


    <string name="total_exercise_time">총 운동 시간</string>
    <string name="unit_exercise_time">시간\n(분)</string>
    <string name="unit_exercise_hour">시간\n(시)</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_percent">%</string>
    <string name="unit_count">회</string>
    <string name="unit_min">분</string>
    <string name="unit_hour">시간</string>
    <string name="unit_day">일</string>
    <string name="unit_num">개</string>
    <string name="unit_user">님</string>



    <string name="btn_action_retry">다시시도</string>
    <string name="btn_action_confirm">확인</string>
    <string name="btn_action_cancel">취소</string>
    <string name="btn_action_finish">종료</string>
    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


    <string name="error_sns_client">인터넷설정을 확인하시고 권한 승인을 해 주세요.</string>
    <string name="error_sns_session">권한이 만료되었습니다, 다시 승인 해 주세요.</string>
    <string name="error_sns_server">해당서버문제로 잠시후 다시 시도해 주세요.</string>
    <string name="error_sns_network">인터넷설정을 확인하시고 다시 시도 해 주세요.</string>
    <string name="error_api_no_data">결과값이 없습니다 다시 시도 해 주세요.</string>
    <string name="error_sns_need_permission">SNS 권한이 승인되지않았습니다. 다시승인해주세요</string>
    <string name="error_no_lgu">스마트홈트는 LGU+ 전용 서비스 입니다. 추후 발전 된 서비스를 더 많은 고객님께 제공 할 수 있도록 최선을 다하겠습니다.</string>
    <string name="error_deny_device">접속하신 기기는 스마트홈트 서비스 이용이 불가한 기기입니다. 추후 발전 된 서비스를 더 많은 고객님께 제공 할 수 있도록 최선을 다하겠습니다.</string>
    <string name="error_string">사용할 수 없는 단어가 포함되어 있습니다.</string>
    <string name="error_check_service">이용에 불편을 드려 죄송합니다.\n현재 서버 점검중 입니다.\n보다 안정적인 서비스 환경을 만들기 위해 최선을 다하겠습니다.</string>
    <string name="error_data_saver">데이터 절약 모드 사용으로 영상 스트리밍, 다운로드 시 품질문제가 발생할 수 있습니다. 스마트홈트 앱을 데이터 제한 없이 사용하도록 허용해야 이용할 수 있습니다.</string>
    <string name="error_mcc_mnc">스마트홈트 앱은 로밍 중에 사용하실 수 없습니다.</string>
    <string name="error_request_text">내용을 입력해 주세요.</string>
    <string name="error_stop_program">선택하신 프로그램은 현재 판매 중단된 상태입니다.</string>
    <string name="error_end_program">선택하신 프로그램의 모집이 마감되었습니다.</string>
    <string name="error_unknown">알수없는 에러</string>
    <string name="error_network_disable">현재 네트워크에 연결되어 있지 않습니다. 인터넷 연결 상태를 확인해주세요. </string>
    <string name="error_network_not_connected">네트워크 오류입니다. 앱 종료 후 다시 접속해 주시기 바랍니다.</string>
    <string name="error_network_client">네트워크 연결이 안정적이지 않습니다. 네트워크 확인 후 앱을 다시 실행해주세요. </string>
    <string name="error_network_server">서버 접속이 원활하지 않습니다. 계속 동일한 문제 발생 시 고객센터 ht.help@kakaoht.com으로 문의해주세요.</string>
    <string name="error_api">콘텐츠 로드하는 중에 오류가 발생했습니다. 계속 동일한 문제 발생 시 고객센터 ht.help@kakaoht.com으로 문의해주세요.</string>
    <string name="error_play_back">영상 재생 중에 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="error_host">영상 로드하는 중에 오류가 발생했습니다. 다시 시도해주세요.</string>

    <string name="error_back_ground">서비스 이용에 불편을 드려 죄송합니다.</string>
    <string name="error_back_ground_title">고객센터 ht.help@kakakoht.com</string>


    <string name="tool_title">TITLE</string>
    <string name="tool_sub_title">SUB TITLE</string>
    <string name="tool_number">00</string>
    <string name="tool_date">0000-00-00</string>
</resources>
