<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_black_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_heavy">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="26dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/subTitle"
            style="@style/font_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_thin"
            android:gravity="left"
            android:text="@string/page_setup_sub_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/versionTitle"
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/page_setup_version_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_light"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitle" />
        <TextView
            android:id="@+id/textVersion"
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/color_white"
            android:text="@string/page_setup_version"
            android:textSize="@dimen/font_light"
            android:layout_marginStart="@dimen/margin_extra_thin"
            app:layout_constraintTop_toTopOf="@id/versionTitle"
            app:layout_constraintStart_toEndOf="@id/versionTitle"/>
        <Button
            android:id="@+id/btnUpdate"
            style="@style/font_light"
            android:layout_width="@dimen/btn_regular_width"
            android:layout_height="@dimen/btn_regular_height"
            android:textSize="@dimen/font_regular"
            android:textColor="@color/color_white"
            android:text="@string/page_setup_btn_update"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/selecter_rect_black_white_border"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/textVersion"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/color_gray_deep"
            app:layout_constraintTop_toBottomOf="@id/btnUpdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/qr"
            android:layout_width="@dimen/icon_heavy"
            android:layout_height="@dimen/icon_heavy"
            android:src="@drawable/qr"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/google"
            android:layout_width="@dimen/icon_light"
            android:layout_height="@dimen/icon_light"
            android:src="@drawable/google"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/margin_thin"
            android:layout_marginStart="@dimen/margin_min"
            app:layout_constraintTop_toBottomOf="@id/qr"
            app:layout_constraintStart_toStartOf="@id/qr" />
        <TextView
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icon_light"
            android:gravity="center"
            android:text="@string/page_home_download"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_thin"
            android:layout_marginStart="@dimen/margin_extra_thin"
            app:layout_constraintStart_toEndOf="@id/google"
            app:layout_constraintTop_toTopOf="@id/google" />

        <TextView
            android:id="@+id/guide1"
            style="@style/font_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="left"
            android:text="@string/page_setup_guide1"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/font_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />
        <TextView
            android:id="@+id/guide2"
            style="@style/font_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_thin"
            android:gravity="left"
            android:text="@string/page_setup_guide2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide1" />
        <TextView
            android:id="@+id/guide3"
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_thin"
            android:gravity="left"
            android:text="@string/page_setup_guide3"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide2" />

        <TextView
            android:id="@+id/guide4"
            style="@style/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:gravity="left"
            android:text="@string/page_setup_guide4"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide3" />
        <TextView
            android:id="@+id/guide5"
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_thin"
            android:gravity="left"
            android:text="@string/page_setup_guide5"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_light"
            app:layout_constraintStart_toEndOf="@id/guide4"
            app:layout_constraintTop_toTopOf="@id/guide4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


