<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_black_light">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/margin_heavy"
        android:layout_marginEnd="@dimen/margin_heavy"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/font_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_bold"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_heavy"
            android:layout_marginEnd="@dimen/margin_heavy"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_heavy"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRetry"
                style="@style/font_light"
                android:layout_width="119dp"
                android:layout_height="43dp"
                android:textSize="@dimen/font_regular"
                android:textColor="@color/color_white"
                android:text="@string/btn_action_retry"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/focus_rect_black_white_border"
                android:layout_margin="@dimen/margin_thin"
                />
            <Button
                android:id="@+id/btnConfirm"
                style="@style/font_light"
                android:layout_width="119dp"
                android:layout_height="43dp"
                android:textSize="@dimen/font_regular"
                android:textColor="@color/color_white"
                android:text="@string/btn_action_confirm"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/focus_rect_black_white_border"
                android:layout_margin="@dimen/margin_thin"
                 />
            <Button
                android:id="@+id/btnFinish"
                style="@style/font_light"
                android:layout_width="119dp"
                android:layout_height="43dp"
                android:textSize="@dimen/font_regular"
                android:textColor="@color/color_white"
                android:text="@string/btn_action_finish"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/focus_rect_black_white_border"
                android:layout_margin="@dimen/margin_thin"
                />
         </LinearLayout>
    </LinearLayout>
</FrameLayout>


