<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_shadow">
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@null"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbars="none">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_heavy"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/title"
                        style="@style/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        tools:text ="@string/tool_title"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_black" />

                    <TextView
                        android:id="@+id/subTitle"
                        style="@style/font_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_thin"
                        android:gravity="left"
                        tools:text ="@string/tool_title"

                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_medium" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                style="@style/font_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:textColor="@color/color_gray"
                                android:text="@string/page_program_sub_title1"
                                android:textSize="@dimen/font_regular"
                               />
                            <TextView
                                android:id="@+id/textInfo1"
                                style="@style/font_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_marginTop="@dimen/margin_extra_thin"
                                android:textColor="@color/color_white"
                                tools:text ="@string/tool_title"
                                android:textSize="@dimen/font_medium"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_heavy"
                            android:orientation="vertical">
                            <TextView
                                style="@style/font_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:textColor="@color/color_gray"
                                android:text="@string/page_program_sub_title2"
                                android:textSize="@dimen/font_regular"
                                />
                            <TextView
                                android:id="@+id/textInfo2"
                                style="@style/font_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_marginTop="@dimen/margin_extra_thin"
                                android:textColor="@color/color_white"
                                tools:text ="@string/tool_title"
                                android:textSize="@dimen/font_medium"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_heavy"
                            android:orientation="vertical">
                            <TextView
                                style="@style/font_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:textColor="@color/color_gray"
                                android:text="@string/page_program_sub_title3"
                                android:textSize="@dimen/font_regular"
                                />
                            <TextView
                                android:id="@+id/textInfo3"
                                style="@style/font_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_marginTop="@dimen/margin_extra_thin"
                                android:textColor="@color/color_white"
                                tools:text ="@string/tool_title"
                                android:textSize="@dimen/font_medium"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_heavy"
                            android:orientation="vertical">
                            <TextView
                                style="@style/font_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:textColor="@color/color_gray"
                                android:text="@string/page_program_sub_title4"
                                android:textSize="@dimen/font_regular"
                                />
                            <TextView
                                android:id="@+id/textInfo4"
                                style="@style/font_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_marginTop="@dimen/margin_extra_thin"
                                android:textColor="@color/color_white"
                                tools:text ="@string/tool_title"
                                android:textSize="@dimen/font_medium"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:id="@+id/line"
                        android:layout_height="1dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@color/color_gray_deep"
                        app:layout_constraintTop_toBottomOf="@id/btnUpdate" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">
                    <FrameLayout
                        android:id="@+id/listArea"
                        android:layout_marginTop="@dimen/page_home_list_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </FrameLayout>
                    <TextView
                        style="@style/font_bold"
                        android:layout_marginStart="@dimen/margin_heavy"
                        android:layout_marginEnd="@dimen/margin_heavy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/color_white"
                        android:text="@string/page_program_info_title"
                        android:textSize="@dimen/font_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        />
                    <TextView
                        android:id="@+id/textInfo"
                        style="@style/font_light"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/color_white"
                        tools:text="@string/tool_sub_title"
                        android:textSize="@dimen/font_regular"
                        android:layout_marginTop="@dimen/margin_extra_light"
                        android:layout_marginStart="@dimen/margin_heavy"
                        android:layout_marginEnd="@dimen/margin_heavy"
                        android:layout_marginBottom="@dimen/margin_heavy"
                        />
                </LinearLayout>
            </FrameLayout>
    </ScrollView>
</FrameLayout>